# brick_structure_command

./: CMakeLists.txt  README.md  package.xml
blueprints/: test.yaml
brick_command.20/: CMakeLists.txt  README.md  package.xml  processed.pcd
brick_command.20/blueprints/: offcenter_test.yaml  test.yaml  testC.yaml  testH.yaml  testI.yaml  test_angle.yaml  test_single_layer.yaml
brick_command.20/brick_pcd/: blue_brick.pcd  green_brick.pcd  orange_brick.pcd  red_brick.pcd
brick_command.20/include/brick_structure/: brick.h  brick_structure.h  geometry.h  pose_estimation.h
brick_command.20/launch/: brick_command.launch  red_brick.launch  robot_test.launch  spawn_wall.launch  test.launch  testC.launch  testH.launch  testI.launch  test_angle.launch  test_single_layer.launch  test_spacing.launch
brick_command.20/lines/: testC.csv  testH.csv  testI.csv  test_angle.csv  test_lines.csv
brick_command.20/msg/: BrickStructureLines.msg
brick_command.20/pointclouds/: test_points.csv
brick_command.20/points/: test.yaml  testC.yaml  testH.yaml  testI.yaml  test_angle.yaml
brick_command.20/src/: brick_command_node.cpp  brick_param_node.cpp  brick_pcd.cpp  brick_structue_gazebo_launch_gen.cpp  structure_pose_est_node.cpp
brick_command.20/src/brick_structure/: brick.cpp  brick_structure.cpp  geometry.cpp  pose_estimation.cpp
brick_command.20/srv/: StructurePoseEst.srv
brick_command.20/test/: README.md  brick_structure_test.cpp
include/brick_command/: brick.h  brick_structure.h  transforms.h
include/brick_structure_command/: brick.h  brick_structure.h  transforms.h
launch/: brick_command.launch
msg/: BrickCommand.msg  BrickMsg.msg
src/: brick.cpp  brick_command_node.cpp  brick_param_node.cpp  test.cpp
src/brick_command/: brick.cpp  brick_structure.cpp  transforms.cpp
src/brick_structure_command/: brick.cpp  brick_structure.cpp  transforms.cpp
srv/: RequestBrickCommand.srv
